--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/stock-prediction:latest
+          tags: ghcr.io/${{ github.repository_owner,, }}/stock-prediction:latest
